Commands extended and epsilon added